[gd_scene load_steps=5 format=3 uid="uid://6qt58vb1mp14"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_sese6"]
[ext_resource type="Script" path="res://game/components/key_item/key_item.gd" id="2_bhanu"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="3_5vv4v"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="4_qx2rw"]

[node name="KeyItem" instance=ExtResource("1_sese6")]
collision_mask = 197639
script = ExtResource("2_bhanu")
zone_scene = ""
scene_switch_enabled = true
spawn_node_name = ""

[node name="Timer" type="Timer" parent="." index="1"]
wait_time = 5.0
one_shot = true

[node name="GrabPointHandLeft" parent="." index="2" instance=ExtResource("3_5vv4v")]

[node name="GrabPointHandRight" parent="." index="3" instance=ExtResource("4_qx2rw")]

[connection signal="picked_up" from="." to="." method="_on_picked_up"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
